fixed header navigation menu scrolling on mobile devices

--- a/imports/client/styles/components/_header.scss
+++ b/imports/client/styles/components/_header.scss
@@ -16,11 +16,8 @@
   justify-content: space-between;
   margin: 0 auto;
   max-width: $site-max-width;
-  overflow-y: scroll;
   padding-left: $default-space;
   padding-right: $default-space;
-
-  -webkit-overflow-scrolling: touch;    // TODO - are there any other mobile-specific styles?
 }
 
 .header__content-left {
@@ -153,7 +150,9 @@
     flex-direction: column;
     height: 0;
     opacity: 0;
+    overflow-y: scroll;
     padding: $large-space;
+    padding-bottom: $large-space * 3;
     padding-top: $medium-space * 2;
     transition: height 0.7s linear, background-color 0.7s linear, visibility 0.7s linear, opacity 0.7s linear;
     visibility: hidden;
@@ -163,6 +162,8 @@
     position: fixed;
     left: 0;
     top: $header-height;
+
+    -webkit-overflow-scrolling: touch;    // TODO - are there any other mobile-specific styles?
   }
 }
 
